--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <!-- The description tag is used by search engines -->
 		<meta name="description" content="This is what my page is about">
     <!-- STYLESHEETS Your main 'style.css' should typically be last -->
-		
-		<!-- other stylesheets, e.g. Google fonts -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+		<!-- other stylesheets, e.g. Google fonts -->	
 		<!-- your stylesheet -->
 		<!-- CRITICAL JAVASCRIPT non critical scripts should be at the end of the 
       body-->
@@ -25,18 +25,43 @@
 
 		
 		<main>
-			<div>
-				<h1>My first day in DES221</h1>
-				<h2>I added No adjective with my name to the rest of the class for icebreaker activity</h2>
+			<div class="container">
+				<h1>Awesome Shots</h1>
+				<h2>epic collection of photos</h2>
 				<p>PUT ONE PARAGRAPH OF YOUR EXPERIENCE</p>
 				<ul>
 					<li>Make a website</li>
 					<li>Target photographers</li>
 					<li></li>
 				</ul>
-
 				
 			</div>
+			<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+				<ol class="carousel-indicators">
+				  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+				  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+				  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+				</ol>
+				<div class="carousel-inner">
+				  <div class="carousel-item active">
+					<img class="d-block w-90" src="img/andre-furtado-Ga9dxdYa35I-unsplash.jpg" alt="First slide">
+				  </div>
+				  <div class="carousel-item">
+					<img class="d-block w-90" src="img/carter-brink-j71ybJtbCJM-unsplash.jpg" alt="Second slide">
+				  </div>
+				  <div class="carousel-item">
+					<img class="d-block w-90" src="img/clay-banks-9oowIP5gPIA-unsplash.jpg" alt="Third slide">
+				  </div>
+				</div>
+				<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+				  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				  <span class="sr-only">Previous</span>
+				</a>
+				<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+				  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+				  <span class="sr-only">Next</span>
+				</a>
+			  </div>
 		</main>
 
 
